--- a/src/App.css
+++ b/src/App.css
@@ -329,3 +329,12 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
   font-size: 1.3rem;
 }
 }
+
+.errorrr{
+  text-align: center;
+  margin-top: 5rem;
+  font-size: 4rem;
+  font-weight: bold;
+  color:red;
+
+}
